app-test/testdata/typesystem/neg/field-access-with-any-type/check/field2.check
testdata/typesystem/neg/field-access-with-any-type/src/field.cal:10:21: error: Not a product.
            OUT <-- u.foo; // error
                    ^